url edits to setup.cfg

--- a/bj/setup.cfg
+++ b/bj/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = bj
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/stats/dgen/hierarchical_data.py
+url = https://github.com/thorwhalen/uu/tree/master/bj
 platforms = any
 description_file = README.md
 description = Generating hierarchical data
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
