--- a/by/setup.cfg
+++ b/by/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = by
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/blob/master/pcoll/select.py
+url = https://github.com/thorwhalen/uu/tree/master/by
 platforms = any
 description_file = README.md
 root_url = https://github.com/thorwhalen/ut/blob/master/pcoll/
