--- a/ef/setup.cfg
+++ b/ef/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ef
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/dpat/buffer.py
+url = https://github.com/thorwhalen/uu/tree/master/ef
 platforms = any
 description_file = README.md
 description = An example of connecting the flush of one buffer to the push of another.
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
