--- a/ek/setup.cfg
+++ b/ek/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ek
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/cluster/w_kmeans.py
+url = https://github.com/thorwhalen/uu/tree/master/ek
 platforms = any
 description_file = README.md
 description = K-means clustering with weights
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
