--- a/eu/setup.cfg
+++ b/eu/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = eu
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/howto/refer_to_relative_path.py
+url = https://github.com/thorwhalen/uu/tree/master/eu
 platforms = any
 description_file = README.md
 description = It's good practice to write code that can be run as is on someone elses computer (or server).
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
