--- a/ha/setup.cfg
+++ b/ha/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = ha
 version = 0.0.3
-url = https://github.com/thorwhalen/laugh
+url = https://github.com/thorwhalen/uu/tree/master/ha
 platforms = any
 description_file = README.md
 root_url = https://github.com/thorwhalen/
