--- a/ho/setup.cfg
+++ b/ho/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ho
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/others/smote.py
+url = https://github.com/thorwhalen/uu/tree/master/ho
 platforms = any
 description_file = README.md
 description = Created on 24.11.2012
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
