--- a/ji/setup.cfg
+++ b/ji/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ji
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/diag/multiple_two_component_manifold_learning.py
+url = https://github.com/thorwhalen/uu/tree/master/ji
 platforms = any
 description_file = README.md
 description = An illustration of various embeddings
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
