--- a/jo/setup.cfg
+++ b/jo/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = jo
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/wserv/flask_wrap.py
+url = https://github.com/thorwhalen/uu/tree/master/jo
 platforms = any
 description_file = README.md
 description = Automatically making flask webservices from python objects
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
