--- a/kw/setup.cfg
+++ b/kw/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = kw
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/pstore.py
+url = https://github.com/thorwhalen/uu/tree/master/kw
 platforms = any
 description_file = README.md
 description = Utils to work with storage
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
