--- a/na/setup.cfg
+++ b/na/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = na
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/callable_arguments_peek.py
+url = https://github.com/thorwhalen/uu/tree/master/na
 platforms = any
 description_file = README.md
 description = Functions and script to peek into the callable/argument structure of a set of callables
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
