--- a/nw/setup.cfg
+++ b/nw/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = nw
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/association/fp_tree.py
+url = https://github.com/thorwhalen/uu/tree/master/nw
 platforms = any
 description_file = README.md
 description = Association mining
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
