--- a/oa/setup.cfg
+++ b/oa/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = oa
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/others/mkcodes.py
+url = https://github.com/thorwhalen/uu/tree/master/oa
 platforms = any
 description_file = README.md
 description = From https://github.com/ryneeverett/mkcodes
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
