--- a/ov/setup.cfg
+++ b/ov/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ov
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/serialize/dynamo.py
+url = https://github.com/thorwhalen/uu/tree/master/ov
 platforms = any
 description_file = README.md
 description = Dynamo access
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
