--- a/rv/setup.cfg
+++ b/rv/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = rv
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/prand.py
+url = https://github.com/thorwhalen/uu/tree/master/rv
 platforms = any
 description_file = README.md
 description = Utils to work with randomness
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
