--- a/ub/setup.cfg
+++ b/ub/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ub
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/serialize/data_accessor.py
+url = https://github.com/thorwhalen/uu/tree/master/ub
 platforms = any
 description_file = README.md
 description = Accessing data in a consistent manner
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
