--- a/uj/setup.cfg
+++ b/uj/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = uj
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/ulist.py
+url = https://github.com/thorwhalen/uu/tree/master/uj
 platforms = any
 description_file = README.md
 description = Utils to work with lists
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
