--- a/uy/setup.cfg
+++ b/uy/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = uy
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/association/fptree_harrington.py
+url = https://github.com/thorwhalen/uu/tree/master/uy
 platforms = any
 description_file = README.md
 description = Based on https://github.com/pbharrin/machinelearninginaction/blob/master/Ch12/fpGrowth.py
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
