--- a/wv/setup.cfg
+++ b/wv/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = wv
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/decomp/empca.py
+url = https://github.com/thorwhalen/uu/tree/master/wv
 platforms = any
 description_file = README.md
 description = Weighted Principal Component Analysis using Expectation Maximization
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
