--- a/xa/setup.cfg
+++ b/xa/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = xa
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/iacc/geo/geopop.py
+url = https://github.com/thorwhalen/uu/tree/master/xa
 platforms = any
 description_file = README.md
 description = Accessing information on population in the word.
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
