--- a/yl/setup.cfg
+++ b/yl/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = yl
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/pdict/ot.py
+url = https://github.com/thorwhalen/uu/tree/master/yl
 platforms = any
 description_file = README.md
 description = Get dictionaries from other objects
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
