--- a/yv/setup.cfg
+++ b/yv/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = yv
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/pdict/get.py
+url = https://github.com/thorwhalen/uu/tree/master/yv
 platforms = any
 description_file = README.md
 description = Simple utils to get stuff out of Mappings (dict-like objects).
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
