--- a/yw/setup.cfg
+++ b/yw/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = yw
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/sound/util.py
+url = https://github.com/thorwhalen/uu/tree/master/yw
 platforms = any
 description_file = README.md
 description = Audio Layers
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
