--- a/yz/setup.cfg
+++ b/yz/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = yz
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/daf/diagnosis.py
+url = https://github.com/thorwhalen/uu/tree/master/yz
 platforms = any
 description_file = README.md
 description = Includes various adwords elements diagnosis functions
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
