--- a/zr/setup.cfg
+++ b/zr/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = zr
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/aw/reporting.py
+url = https://github.com/thorwhalen/uu/tree/master/zr
 platforms = any
 description_file = README.md
 description = AdWords reporting tools
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
