--- a/an/setup.cfg
+++ b/an/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = an
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/webscrape/misc/amazon.py
+url = https://github.com/thorwhalen/uu/tree/master/an
 platforms = any
 description_file = README.md
 description = Scraping and parsing amazon
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
