--- a/au/setup.cfg
+++ b/au/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = au
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/stats/filt.py
+url = https://github.com/thorwhalen/uu/tree/master/au
 platforms = any
 description_file = README.md
 description = Filtering outliers
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
