--- a/aw/setup.cfg
+++ b/aw/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = aw
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/utils.py
+url = https://github.com/thorwhalen/uu/tree/master/aw
 platforms = any
 description_file = README.md
 description = Machine learning utils
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
