--- a/bh/setup.cfg
+++ b/bh/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = bh
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/decomp/fuzzy_lda.py
+url = https://github.com/thorwhalen/uu/tree/master/bh
 platforms = any
 description_file = README.md
 description = Fuzzy Linear Discriminant Analysis
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
