--- a/cw/setup.cfg
+++ b/cw/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = cw
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/stats/dgen/bin.py
+url = https://github.com/thorwhalen/uu/tree/master/cw
 platforms = any
 description_file = README.md
 description = Generating binary data
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
