--- a/dn/setup.cfg
+++ b/dn/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = dn
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/stats/bin_est/shapley.py
+url = https://github.com/thorwhalen/uu/tree/master/dn
 platforms = any
 description_file = README.md
 description = Shapley value analysis
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
