--- a/ej/setup.cfg
+++ b/ej/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ej
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/pstr/gen.py
+url = https://github.com/thorwhalen/uu/tree/master/ej
 platforms = any
 description_file = README.md
 description = String generation
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
