--- a/el/setup.cfg
+++ b/el/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = el
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/aw/manip.py
+url = https://github.com/thorwhalen/uu/tree/master/el
 platforms = any
 description_file = README.md
 description = Includes functions to manipulate adwords datasets
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
