--- a/fk/setup.cfg
+++ b/fk/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = fk
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/dacc/es/change_mapping.py
+url = https://github.com/thorwhalen/uu/tree/master/fk
 platforms = any
 description_file = README.md
 description = Based on code from Julien Palard.
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
