--- a/ge/setup.cfg
+++ b/ge/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ge
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/stats/fit/utils.py
+url = https://github.com/thorwhalen/uu/tree/master/ge
 platforms = any
 description_file = README.md
 description = Utils for training models
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
