--- a/hf/setup.cfg
+++ b/hf/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = hf
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/daf/dup_diag.py
+url = https://github.com/thorwhalen/uu/tree/master/hf
 platforms = any
 description_file = README.md
 description = Includes functions to diagnose duplicates in dataframes.
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
