--- a/hg/setup.cfg
+++ b/hg/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = hg
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/association/paired_counts_fptree.py
+url = https://github.com/thorwhalen/uu/tree/master/hg
 platforms = any
 description_file = README.md
 description = Frequent itemsets -- paired counts fp-tree
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
