--- a/hz/setup.cfg
+++ b/hz/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = hz
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/synthetic/from_labeled_data.py
+url = https://github.com/thorwhalen/uu/tree/master/hz
 platforms = any
 description_file = README.md
 description = A collection of functions to generate synthetic data from real labeled data itself.
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
