--- a/if/setup.cfg
+++ b/if/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = if
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/scrap/xgoogle/BeautifulSoup.py
+url = https://github.com/thorwhalen/uu/tree/master/if
 platforms = any
 description_file = README.md
 description = Beautiful Soup
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
