--- a/ij/setup.cfg
+++ b/ij/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ij
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/feature_extraction/text.py
+url = https://github.com/thorwhalen/uu/tree/master/ij
 platforms = any
 description_file = README.md
 description = Text feature extraction
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
