--- a/ir/setup.cfg
+++ b/ir/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ir
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/serialize/amazon_sender.py
+url = https://github.com/thorwhalen/uu/tree/master/ir
 platforms = any
 description_file = README.md
 description = amazon_sender.py
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
