--- a/iy/setup.cfg
+++ b/iy/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = iy
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/aw/dup_diag.py
+url = https://github.com/thorwhalen/uu/tree/master/iy
 platforms = any
 description_file = README.md
 description = Includes functions to diagnose duplicates in adwords elements
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
