--- a/ju/setup.cfg
+++ b/ju/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ju
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/stats/classification/explore.py
+url = https://github.com/thorwhalen/uu/tree/master/ju
 platforms = any
 description_file = README.md
 description = Classification exploration
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
