--- a/jy/setup.cfg
+++ b/jy/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = jy
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/geo.py
+url = https://github.com/thorwhalen/uu/tree/master/jy
 platforms = any
 description_file = README.md
 description = utils for ipython geography
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
