--- a/kc/setup.cfg
+++ b/kc/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = kc
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/pfilt.py
+url = https://github.com/thorwhalen/uu/tree/master/kc
 platforms = any
 description_file = README.md
 description = Utils for filtering
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
