--- a/lb/setup.cfg
+++ b/lb/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = lb
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/importing.py
+url = https://github.com/thorwhalen/uu/tree/master/lb
 platforms = any
 description_file = README.md
 description = utils for ipython importing
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
