--- a/lh/setup.cfg
+++ b/lh/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = lh
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/log.py
+url = https://github.com/thorwhalen/uu/tree/master/lh
 platforms = any
 description_file = README.md
 description = logging functions
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
