--- a/lv/setup.cfg
+++ b/lv/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = lv
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/slurping.py
+url = https://github.com/thorwhalen/uu/tree/master/lv
 platforms = any
 description_file = README.md
 description = Utils to slurp stuff
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
