--- a/nh/setup.cfg
+++ b/nh/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = nh
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/data_flow.py
+url = https://github.com/thorwhalen/uu/tree/master/nh
 platforms = any
 description_file = README.md
 description = framework for data flow
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
