--- a/nj/setup.cfg
+++ b/nj/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = nj
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/others/triangle.py
+url = https://github.com/thorwhalen/uu/tree/master/nj
 platforms = any
 description_file = README.md
 description = Triangle plots
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
