--- a/nm/setup.cfg
+++ b/nm/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = nm
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/decomp/sompy.py
+url = https://github.com/thorwhalen/uu/tree/master/nm
 platforms = any
 description_file = README.md
 description = SOM utils
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
