--- a/oj/setup.cfg
+++ b/oj/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = oj
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/daf/excel.py
+url = https://github.com/thorwhalen/uu/tree/master/oj
 platforms = any
 description_file = README.md
 description = Reading excel (but more than just cell values: Also colors
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
