--- a/ow/setup.cfg
+++ b/ow/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ow
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/parse/bsoup.py
+url = https://github.com/thorwhalen/uu/tree/master/ow
 platforms = any
 description_file = README.md
 description = functions that work on soup
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
