--- a/rh/setup.cfg
+++ b/rh/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = rh
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/cluster/supervised.py
+url = https://github.com/thorwhalen/uu/tree/master/rh
 platforms = any
 description_file = README.md
 description = Supervised clustering
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
