--- a/uf/setup.cfg
+++ b/uf/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = uf
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/pobj.py
+url = https://github.com/thorwhalen/uu/tree/master/uf
 platforms = any
 description_file = README.md
 description = Utils to work with python objects
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
