--- a/ul/setup.cfg
+++ b/ul/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ul
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/daf/resources/disp_templates.py
+url = https://github.com/thorwhalen/uu/tree/master/ul
 platforms = any
 description_file = README.md
 description = Dataframe display tewmplates
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
