--- a/uw/setup.cfg
+++ b/uw/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = uw
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/util/decorators.py
+url = https://github.com/thorwhalen/uu/tree/master/uw
 platforms = any
 description_file = README.md
 description = useful decorators
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
