--- a/vd/setup.cfg
+++ b/vd/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = vd
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/ml/testing_multiple_classifiers.py
+url = https://github.com/thorwhalen/uu/tree/master/vd
 platforms = any
 description_file = README.md
 description = Multi classifier testing
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
