--- a/xl/setup.cfg
+++ b/xl/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = xl
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/parse/google.py
+url = https://github.com/thorwhalen/uu/tree/master/xl
 platforms = any
 description_file = README.md
 description = Parsing google results
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
