--- a/ya/setup.cfg
+++ b/ya/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ya
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/pdict/my_partial_mongoquery.py
+url = https://github.com/thorwhalen/uu/tree/master/ya
 platforms = any
 description_file = README.md
 description = Make filters with the mongo language
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
