--- a/yf/setup.cfg
+++ b/yf/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = yf
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/pdict/diagnosis.py
+url = https://github.com/thorwhalen/uu/tree/master/yf
 platforms = any
 description_file = README.md
 description = Diagnosing dictionaries
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
