--- a/yi/setup.cfg
+++ b/yi/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = yi
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/pdict/to.py
+url = https://github.com/thorwhalen/uu/tree/master/yi
 platforms = any
 description_file = README.md
 description = Convert dictionaries to other objects
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
