--- a/ys/setup.cfg
+++ b/ys/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = ys
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/pdict/special.py
+url = https://github.com/thorwhalen/uu/tree/master/ys
 platforms = any
 description_file = README.md
 description = Special dicts
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
