--- a/yx/setup.cfg
+++ b/yx/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = yx
 version = 0.0.3
-url = https://github.com/thorwhalen/ut/tree/master/daf/manip.py
+url = https://github.com/thorwhalen/uu/tree/master/yx
 platforms = any
 description_file = README.md
 description = Dataframe manipulation tools
-root_url = https://github.com/thorwhalen/ut/tree/master/
+root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
 long_description = file:README.md
