--- a/if/setup.cfg
+++ b/if/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = if
-version = 0.0.3
+version = 0.0.5
 url = https://github.com/thorwhalen/uu/tree/master/if
 platforms = any
 description_file = README.md
-description = Beautiful Soup
+description = Face-lift makeing BeautifulSoup even more beautiful
 root_url = https://github.com/thorwhalen/uu/tree/master/
 author = Thor Whalen
 license = apache-2.0
