--- a/au/setup.cfg
+++ b/au/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = au
-version = 0.0.6
+version = 0.0.7
 url = https://github.com/thorwhalen/uu/tree/master/au
 platforms = any
 description_file = README.md
@@ -18,4 +18,6 @@ packages = find:
 include_package_data = True
 zip_safe = False
 install_requires = 
+	numpy
+	scikit-learn
 
