--- a/ha/setup.cfg
+++ b/ha/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ha
-version = 0.0.4
+version = 0.0.5
 url = https://github.com/thorwhalen/uu/tree/master/ha
 platforms = any
 description_file = README.md
@@ -18,6 +18,12 @@ packages = find:
 include_package_data = True
 zip_safe = False
 install_requires = 
-	pyjokes
+	dol
+	graze
+	config2py
+
+[options.extras_require]
+optional_deps = 
 	laugh
+	pyjokes
 
