--- a/yx/setup.cfg
+++ b/yx/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = yx
-version = 0.0.4
+version = 0.0.8
 url = https://github.com/thorwhalen/uu/tree/master/yx
 platforms = any
 description_file = README.md
@@ -18,4 +18,6 @@ packages = find:
 include_package_data = True
 zip_safe = False
 install_requires = 
+	numpy
+	pandas
 
