--- a/by/setup.cfg
+++ b/by/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = by
-version = 0.0.5
+version = 0.0.6
 url = https://github.com/thorwhalen/uu/tree/master/by
 platforms = any
 description_file = README.md
@@ -11,6 +11,11 @@ description = selection tools
 long_description = file:README.md
 long_description_content_type = text/markdown
 keywords = 
+		matching
+		pairs
+		intervals
+		selection
+		nearest neighbors
 display_name = by
 
 [options]
@@ -18,4 +23,6 @@ packages = find:
 include_package_data = True
 zip_safe = False
 install_requires = 
+	numpy
+	scikit-learn
 
